# wti

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
src/: main.rs
