[package]
name = "wti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
calamine = "0.24.0"
clap = { version = "4.5.0", features = ["derive"] }
clickrs = "0.1.5"
colored = "2.1.0"
csv = "1.3.0"
directories = "5.0.1"
html-escape = "0.2.13"
itertools = "0.12.1"
octocrab = "0.32.0"
regex = "1.10.2"
reqwest = "0.11.23"
rust-ini = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempdir = "0.3.7"
tokio = { version = "1.12.0", features = ["full"] }
use = "0.0.1-pre.0"
utf16string = "0.2.0"
zip = "0.6.6"
